security/authn/02-mtls/01-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: bookinfo-mtls-gateway
 namespace: bookinfo
spec:
 selector:
   istio: ingressgateway # use istio default ingress gateway
 servers:
 - port:
     number: 443
     name: https
     protocol: HTTPS
   tls:
     mode: MUTUAL
     credentialName: bookinfo-credential # must be the same as secret
   hosts:
   - '*'
