security/authn/02-mtls/03-deny-noauthn.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-product
 namespace: bookinfo
spec:
 selector:
   matchLabels:
     app: productpage
 action: DENY
 rules:
 - from:
   - source:
       notRequestPrincipals: ["*/testing@secure.istio.io"]
       notPrincipals: ["*"]
